# FolderBot

./: '  .gitignore  Cargo.toml  README.md  bk.sh  responses  todo_tickets.txt  tool.py
.devcontainer/: devcontainer.json
aa/: .gitignore  aalb.py  bot.py  daemon.py  query.py  requirements.txt
resources/: deaths.resp  titles.resp
src/: audio.rs  command_tree.rs  enchants.rs  game.rs  lib.rs  main.rs  player_data.rs  resp1_parse.rs  responses.rs  spotify.rs  trident.rs  yahtzee.rs
src/apis/: mod.rs  roroapi.rs
src/commands/: aaleaderboard.rs  anyleaderboard.rs  mcsr.rs  mod.rs
src/db/: game.rs  player.rs
