[package]
name = "folderbot"
version = "1.0.0"
authors = ["DesktopFolder"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
futures = "0.3"
async-trait = "0.1.36"
serde_json = "1.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.9.0"
rodio = "0.10"
async-std = "1.6.2"
