[package]
name = "folderbot"
version = "1.0.0"
authors = ["DesktopFolder"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = [ "small_rng" ] }
regex = "1"
futures = "0.3"
async-trait = "0.1.36"
serde_json = "1.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.9.0"
rodio = "0.15"
async-std = { version = "1.6.2", features = ["tokio1"] }
reqwest = { version = "0.11", features = ["json"] }
serde_with = { version = "2.2.0" }
rspotify = { version = "0.12.0", features = ["env-file", "cli"] }
